# zero2prod

./: .env-sample  .gitignore  .ignore  Cargo.toml  readme.md
mongodb/: docker-compose.yml
src/: lib.rs  main.rs
src/models/: mod.rs
src/repository/: mongodb_repo.rs
tests/: health_check.rs
